# ibaHD-API-Sample-Clients

./: .gitignore  README.md
cpp/: ApiKeyAuthenticator.h  CMakeLists.txt  README.md  ibahdapi_sampleclient.cpp
csharp/: README.md  ibaHdApiSampleClient.sln
csharp/ibaHdApi/: ibaHdApi.csproj
csharp/ibaHdApiSampleClient/: Program.cs  ibaHdApiSampleClient.csproj
python/: CHANGELOG.md  LICENSE-MIT.txt  LICENSE-PROPRIETARY.txt  README.md  ibahdapi_sampleclient.py  tutorial.ipynb
